Fix broken css

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
   font-size: 16px;
   line-height: 28px;
   color: #222;
-  background-color: #fff6f2
+  background-color: #fff6f2;
   font-weight: 400;
   white-space: nowrap;
 }
